--- a/src/main/resources/static/angular/index.html
+++ b/src/main/resources/static/angular/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Private Chat Project</title>
-    <link rel="stylesheet" href="/app.min.css">
-    <link rel="stylesheet" href="/vendors.min.css">
+    <link rel="stylesheet" href="/angular/app.min.css">
+    <link rel="stylesheet" href="/angular/vendors.min.css">
   </head>
 
   <body>
     <div class="container">
       <ng-view></ng-view>
     </div>
-    <script type="text/javascript" src="/vendors.min.js"></script>
-    <script type="text/javascript" src="/app.min.js"></script>
+    <script type="text/javascript" src="/angular/vendors.min.js"></script>
+    <script type="text/javascript" src="/angular/app.min.js"></script>
   </body>
 </html>
